# online_excel

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 490af42ae3ba_init_migration.py  66bbceeef96e_deleted_fullname_added_firstname_.py
app/models/: table.py
backend/app/: config.py  exceptions.py  main.py
backend/app/api/endpoints/: __init__.py  data.py  tables.py
backend/app/auth/: dao.py  models.py  router.py  schemas.py  utils.py
backend/app/core/: __init__.py  database.py  settings.py
backend/app/dao/: __init__.py  database.py
backend/app/dependencies/: auth_dep.py  dao_dep.py
backend/app/models/: __init__.py  data.py  table.py  user.py
backend/app/repository/: __init__.py  base.py  data.py  table.py  user.py
backend/app/schemas/: __init__.py  data.py  table.py  user.py
backend/app/services/: __init__.py  data.py  table.py
